--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,8 @@ BROWSERLESS_WS_URL=wss://your-browserless-instance.com
 
 # OpenAI Configuration
 OPENAI_API_KEY=sk-your-api-key-here
+OPENAI_MODEL_TEXT=gpt-4o-mini
+OPENAI_MODEL_VISION=gpt-4o-mini
 
 # Instagram Credentials (optional, for future use)
 INSTAGRAM_USERNAME=your_username
