--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,8 @@ BROWSERLESS_WS_URL=wss://your-browserless-instance.com
 OPENAI_API_KEY=sk-your-api-key-here
 OPENAI_MODEL_TEXT=gpt-4o-mini
 OPENAI_MODEL_VISION=gpt-4o-mini
+OPENAI_TEMPERATURE_TEXT=1
+OPENAI_TEMPERATURE_VISION=1
 
 # Instagram Credentials (optional, for future use)
 INSTAGRAM_USERNAME=your_username
