Braserless standard Session

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ BROWSERLESS_SESSION_ENABLED=false
 BROWSERLESS_SESSION_TTL_MS=300000
 BROWSERLESS_SESSION_STEALTH=false
 BROWSERLESS_SESSION_HEADLESS=true
+BROWSERLESS_RECONNECT_TIMEOUT_MS=60000
 BROWSER_USE_MAX_RETRIES=3
 BROWSER_USE_RETRY_BACKOFF=2
 
