--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,8 @@ OPENAI_TEMPERATURE_VISION=1
 # Instagram Credentials (optional, for future use)
 INSTAGRAM_USERNAME=your_username
 INSTAGRAM_PASSWORD=your_password
+# If true, always validate session with HTTP before reuse (can force re-login frequently)
+INSTAGRAM_SESSION_STRICT_VALIDATION=false
 
 # Application Settings
 LOG_LEVEL=INFO
