profile scrape route

--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,6 @@ API_KEY=change-me
 API_AUTH_HEADER_NAME=X-API-Key
 # Comma-separated list of public paths that do not require key
 API_AUTH_PUBLIC_PATHS=/api/health
+
+# Profile scrape cache (days)
+PROFILE_CACHE_TTL_DAYS=2
