--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,12 @@ INSTAGRAM_PASSWORD=your_password
 # If true, always validate session with HTTP before reuse (can force re-login frequently)
 INSTAGRAM_SESSION_STRICT_VALIDATION=false
 
+# Investing credentials (optional, used by /api/investing_scrape)
+INVESTING_USERNAME=your_investing_username
+INVESTING_PASSWORD=your_investing_password
+# If true, validate session with HTTP before reuse
+INVESTING_SESSION_STRICT_VALIDATION=false
+
 # Application Settings
 LOG_LEVEL=INFO
 MAX_RETRIES=3
