capture and import human local login

--- a/.env.example
+++ b/.env.example
@@ -28,7 +28,8 @@ OPENAI_MODEL_VISION=gpt-4o-mini
 OPENAI_TEMPERATURE_TEXT=1
 OPENAI_TEMPERATURE_VISION=1
 
-# Instagram Credentials (optional, for future use)
+# Instagram Credentials (optional)
+# Leave empty when using manual session import flow (scripts/capture_instagram_session.py + scripts/import_instagram_session.py)
 INSTAGRAM_USERNAME=your_username
 INSTAGRAM_PASSWORD=your_password
 # If true, always validate session with HTTP before reuse (can force re-login frequently)
