docs route with no authentication and user_session in generic_scrape route

--- a/.env.example
+++ b/.env.example
@@ -52,7 +52,7 @@ API_KEY=change-me
 # API_KEYS=key-1,key-2
 API_AUTH_HEADER_NAME=X-API-Key
 # Comma-separated list of public paths that do not require key
-API_AUTH_PUBLIC_PATHS=/api/health
+API_AUTH_PUBLIC_PATHS=/api/health,/docs,/openapi.json
 
 # Profile scrape cache (days)
 PROFILE_CACHE_TTL_DAYS=2
