--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,9 @@ BROWSER_USE_WS_COMPRESSION=auto
 OPENAI_API_KEY=sk-your-api-key-here
 OPENAI_MODEL_TEXT=gpt-4o-mini
 OPENAI_MODEL_VISION=gpt-4o-mini
+# Optional fallback models used when primary hits rate-limit (429)
+OPENAI_FALLBACK_MODEL_TEXT=
+OPENAI_FALLBACK_MODEL_VISION=
 OPENAI_TEMPERATURE_TEXT=1
 OPENAI_TEMPERATURE_VISION=1
 
